--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,5 +5,6 @@
     <dimen name="edit_text_margin_top">16dp</dimen>
     <dimen name="buttons_margin">16dp</dimen>
     <dimen name="delete_button_margin">50dp</dimen>
+    <dimen name="image_view_thumbnail">100dp</dimen>
 
 </resources>
