--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -100,9 +100,10 @@
 
         <ImageView
             android:id="@+id/image_view_thumbnail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_marginLeft="@dimen/image_view_thumbnail"
+            android:layout_marginRight="32dp"
             android:layout_weight="1" />
 
     </LinearLayout>
